[gd_scene load_steps=3 format=3 uid="uid://bkputp7g0g6fr"]

[ext_resource type="Script" uid="uid://d0s4jxcw62hh8" path="res://Scenes/settings.gd" id="1_1rerr"]
[ext_resource type="Script" uid="uid://d0u5hpa1ghicm" path="res://Scenes/menu.gd" id="1_xhh6f"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("menu", "settings", "back_button", "single_button", "multi_button", "settings_button", "quit_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xhh6f")
menu = NodePath("Menu")
settings = NodePath("Settings")
back_button = NodePath("Back")
single_button = NodePath("Menu/Control/Single")
multi_button = NodePath("Menu/Control2/Multi")
settings_button = NodePath("Menu/Control3/Settings")
quit_button = NodePath("Menu/Control4/Quit")

[node name="Menu" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 7

[node name="Single" type="Button" parent="Menu/Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Singleplayer"

[node name="Control2" type="Control" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 7

[node name="Multi" type="Button" parent="Menu/Control2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Multiplayer"

[node name="Control3" type="Control" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 7

[node name="Settings" type="Button" parent="Menu/Control3"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="Control4" type="Control" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 7

[node name="Quit" type="Button" parent="Menu/Control4"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="Settings" type="VBoxContainer" parent="." node_paths=PackedStringArray("board_size", "win_con")]
visible = false
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
script = ExtResource("1_1rerr")
board_size = NodePath("Board Size/Size_Picker")
win_con = NodePath("Win Condition/Win_Picker")

[node name="Label" type="Label" parent="Settings"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="Board Size" type="HBoxContainer" parent="Settings"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="Settings/Board Size"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Board Size"

[node name="Size_Picker" type="OptionButton" parent="Settings/Board Size"]
layout_mode = 2

[node name="Win Condition" type="HBoxContainer" parent="Settings"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="Settings/Win Condition"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Win Condition"

[node name="Win_Picker" type="OptionButton" parent="Settings/Win Condition"]
layout_mode = 2

[node name="Back" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 69.0
offset_top = -122.0
offset_right = 151.0
offset_bottom = -69.0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="pressed" from="Menu/Control/Single" to="." method="_on_single_pressed"]
[connection signal="pressed" from="Menu/Control2/Multi" to="." method="_on_multi_pressed"]
[connection signal="pressed" from="Menu/Control4/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
